# performance-fastapi-solution-design

./: .gitignore  README.md  main.py  pyproject.toml
app/crud/: item.py
app/dataclasses/: item.py
app/models/: item.py
app/routers/: item.py  system.py
app/schemas/: item.py
app/utils/: database.py
tests/: test_crud_items.py  test_crud_items_async.py
