[project]
name = "performance-fastapi-solution-design"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.118.0",
    "greenlet>=3.2.4",
    "httptools>=0.6.4",
    "pytest>=8.4.2",
    "sqlalchemy>=2.0.43",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
